@@ -1,0 +1,6 @@
+ALTER TABLE TESTTABLE DROP CONSTRAINT TESTTABLE_PK;
+ALTER TABLE TESTTABLE ADD CONSTRAINT TESTPK PRIMARY KEY(PK1,PK2);
+DROP INDEX TESTTABLE_IDX1;
+CREATE INDEX TESTINDEX ON TESTTABLE (AT2);
+DROP INDEX TESTTABLE_IDX2;
+CREATE UNIQUE INDEX TESTINDEX2 ON TESTTABLE (AT3);
