@@ -1,0 +1,2 @@
+ALTER TABLE TESTTABLE2 DROP CONSTRAINT REL_1;
+ALTER TABLE TESTTABLE2 ADD CONSTRAINT TESTREL FOREIGN KEY (PK1,PK2) REFERENCES TESTTABLE1(PK1,PK2) ON DELETE CASCADE ON UPDATE CASCADE;
