@@ -1,0 +1,2 @@
+ALTER TABLE TESTTABLE DROP CONSTRAINT TESTTABLE_PK;
+DROP INDEX TESTTABLE_IDX1;
