@@ -1,0 +1,1 @@
+ALTER TABLE TESTTABLE2 DROP CONSTRAINT REL_1;
